--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,12 @@ media-*.tar
 
 # If NPM crashes, it generates a log, let's ignore it too.
 npm-debug.log
-/priv
+/priv/gettext
 # The directory NPM downloads your dependencies sources to.
 /assets/node_modules/
 
 # Since we are building assets from assets/,
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
-/priv/static/
+/priv/
+.vscode
