Added two libraries to gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,8 @@ test:
     - workerbuild
   coverage: /\[TOTAL\]\s+(\d+\.\d+)%/
   script:
+    - apk ffmpeg
+    - apk imagemagick
     - mix deps.get
     - mix coveralls
 
