supply the env var in the right place

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,5 +37,5 @@ test:
     - apk add ffmpeg
     - apk add imagemagick
     - mix deps.get
-    - mix coveralls
+    - MEDIA_TEST=test mix coveralls
 
