--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -33,6 +33,6 @@ jobs:
     - name: Install dependencies
       run: mix deps.get
     - name: Run tests
-      run: mix test
+      run: MEDIA_TEST=test mix test
     - name: Run Credo
       run: mix credo --strict
